Do the processing in the worker

--- a/demo.serialized.html
+++ b/demo.serialized.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Web Components 1 Demo • Static Image Grid</title>
     <meta charset="utf-8">
     <style>
@@ -21,9 +21,9 @@
         display: none;
       }
     </style>
-    <script type="module" src="./demo.js" defer data-ssr=""></script>
+    <script type="module" src="./demo.js" defer="" data-ssr=""></script>
   </head>
-<body data-ssr="">
+  <body data-ssr="">
     <p class="desc">The images are randomly sorted and will re-sort every 10 seconds.</p>
 
     <image-grid aria-label="Image grid" role="region" aria-live="polite">
@@ -224,4 +224,5 @@
     <slot></slot>
   </template>
 </image-grid>
-  </body></html>
+  </body>
+</html>
